fix(gallery): fixed uneven row end for certain browsers like safari, etc.

--- a/src/app/gallery.component.css
+++ b/src/app/gallery.component.css
@@ -18,7 +18,8 @@
   cursor: pointer;
 }
 .imagerow {
-  padding: 0px 0px 1px 0px;
+  margin: 0px 1px 1px 0px;
+  overflow: hidden;
   display: flex;
 }
 ::-webkit-scrollbar {
